--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     height: 96vh;
     background: url("../imgs/bg.jpg");
     background-size: cover;
@@ -10,26 +11,74 @@ body {
 
 .box {
     position: relative;
-    width: 70%;
-    height: 40%;
+    width: 200px;
+    height: 300px;
     display: flex;
     align-items: center;
-    background-color: white;
-    padding: 8px 14px;
     border-radius: 20px;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .card {
-    position: absolute;
+    position: relative;
     height: 90%;
-    width: 20%;
+    width: inherit;
     background-color: black;
     border-radius: 15px;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     transform-style: preserve-3d;
     transition: all 0.5s ease;
     cursor: pointer;
+    margin: 10px;
+}
+
+.card::before,
+.card::after {
+    content: "";
+    top: -2px;
+    left: -2px;
+    position: absolute;
+    background: linear-gradient(45deg,
+            #ff0037,
+            #ff00f2,
+            #f84983,
+            #fffb00,
+            #9dff00,
+            #fba300,
+            #ff6600,
+            #ff3c00,
+            #3348ff,
+            #ae00ff);
+    background-size: 400%;
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    z-index: -1;
+    border-radius: 15px;
+    animation: border 20s linear infinite;
+}
+
+.card::after {
+    filter: blur(30px);
+}
+
+.active {
+    top: -120px;
+    transform: scale(1.3);
+}
+
+@keyframes border {
+
+    0% {
+        background-position: 0 0;
+    }
+
+    50% {
+        background-position: 400% 0;
+    }
+
+    100% {
+        background-position: 0 0;
+    }
+
 }
 
 .rotate-card {
@@ -59,7 +108,10 @@ body {
 }
 
 .front h3 {
+    background-color: black;
+    padding: 8px;
     color: #ffff;
+    border-radius: 10px;
 }
 
 .front h3 span {
@@ -72,7 +124,7 @@ body {
 .back div {
     height: 100%;
     width: 100%;
-    padding: 20px;
+    padding: 0px 12px;
 
     display: flex;
     justify-content: center;
@@ -83,6 +135,6 @@ body {
     object-fit: cover;
     object-position: right;
     width: 100%;
-    height: 85%;
+    height: 90%;
     border-radius: 15px;
 }
