--- a/css/index.css
+++ b/css/index.css
@@ -3,12 +3,27 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 96vh;
+    height: 97.7vh;
     background: url("../imgs/bg.jpg");
     background-size: cover;
     font-family: 'Secular One', sans-serif;
     background-position: center;
     background-repeat: no-repeat;
+}
+
+.loader {
+    position: absolute;
+    z-index: 90;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.loader h1 {
+    color: #ffff;
 }
 
 .box {
